[gd_scene load_steps=19 format=3 uid="uid://6yph0ss0u11p"]

[ext_resource type="Texture2D" uid="uid://bamtq0jdounmo" path="res://free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Push_6.png" id="1_oiwju"]
[ext_resource type="Texture2D" uid="uid://bgf5yw4lgjps1" path="res://free-pixel-art-tiny-hero-sprites/3 Dude_Monster/Dude_Monster_Idle_4.png" id="2_qi6ex"]
[ext_resource type="Script" path="res://Scenes(Prefabs)/village_player_detect.gd" id="3_3pnrb"]
[ext_resource type="Script" path="res://Scripts/States/finite_state_machine.gd" id="4_g4pep"]
[ext_resource type="Script" path="res://Scripts/States/villager_idle_state.gd" id="5_57p0d"]
[ext_resource type="Script" path="res://Scripts/States/player_detected_state.gd" id="6_t6v03"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vnie2"]
atlas = ExtResource("1_oiwju")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pa1wy"]
atlas = ExtResource("1_oiwju")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tq121"]
atlas = ExtResource("1_oiwju")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uw71f"]
atlas = ExtResource("1_oiwju")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_armq0"]
atlas = ExtResource("1_oiwju")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn6n0"]
atlas = ExtResource("1_oiwju")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxa68"]
atlas = ExtResource("2_qi6ex")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpmo0"]
atlas = ExtResource("2_qi6ex")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y7sau"]
atlas = ExtResource("2_qi6ex")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3ckn"]
atlas = ExtResource("2_qi6ex")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vq4ma"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnie2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pa1wy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tq121")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uw71f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_armq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn6n0")
}],
"loop": true,
"name": &"attention",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxa68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpmo0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y7sau")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3ckn")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_34b5b"]
radius = 59.46

[node name="DetectingPete" type="Node2D"]
position = Vector2(90, 36)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-11, 0)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_vq4ma")
animation = &"attention"
autoplay = "idle"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(-21, 15)
collision_layer = 4
collision_mask = 3
script = ExtResource("3_3pnrb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(6, -8)
shape = SubResource("CircleShape2D_34b5b")

[node name="FiniteStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("4_g4pep")
state = NodePath("VillagerIdleState")

[node name="VillagerIdleState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("5_57p0d")
animator = NodePath("../../AnimatedSprite2D")

[node name="PlayerDetectedState" type="Node" parent="FiniteStateMachine" node_paths=PackedStringArray("animator")]
script = ExtResource("6_t6v03")
animator = NodePath("../../AnimatedSprite2D")

[connection signal="area_entered" from="Area2D" to="Area2D" method="_on_area_entered"]
[connection signal="area_exited" from="Area2D" to="Area2D" method="_on_area_exited"]
[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
